{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 207,
  "lineage": "e5cfda37-a5cd-4768-03e1-bd21b3c450a9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670025224396:security-group/sg-019770e1bb93ce5e8",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-019770e1bb93ce5e8",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-0a72697a34dff26e7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "iacp_server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0edfed9d6e9a4031b",
            "arn": "arn:aws:ec2:us-east-1:670025224396:instance/i-09a211c97f2b71b25",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a211c97f2b71b25",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "PeterG",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02b89b8b7a140428d",
            "private_dns": "ip-10-56-0-4.ec2.internal",
            "private_ip": "10.56.0.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0606e009a5d737fc4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e52e24be74c3ae8",
            "tags": {
              "Name": "iacppg-iacp-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010712f6d7ff703ef",
              "sg-019770e1bb93ce5e8"
            ]
          },
          "dependencies": [
            "aws_db_instance.scalr_mysql",
            "aws_db_parameter_group.default",
            "aws_db_subnet_group.scalr",
            "aws_security_group.mysql_sg",
            "aws_security_group.scalr_sg",
            "local_file.license_file",
            "null_resource.fix_key",
            "random_password.mysql_pw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "scalr_lb_listener",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "listener_rule",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "scalr_lb_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:670025224396:targetgroup/iacppg-scalr-lb-tg/e3b2291dd6ba8374",
            "arn_suffix": "targetgroup/iacppg-scalr-lb-tg/e3b2291dd6ba8374",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:670025224396:targetgroup/iacppg-scalr-lb-tg/e3b2291dd6ba8374",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "iacppg-scalr-lb-tg",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "iacppg-scalr-lb-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0a72697a34dff26e7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "scalr_tg_attachment",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670025224396:security-group/sg-0cc9388fcef2b4e50",
            "description": "Used in the terraform",
            "egress": [],
            "id": "sg-0cc9388fcef2b4e50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "iacppg-mysql_sg",
            "name_prefix": null,
            "owner_id": "670025224396",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0a72697a34dff26e7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "scalr_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670025224396:security-group/sg-010712f6d7ff703ef",
            "description": "General rules for Scalr Servers",
            "egress": [],
            "id": "sg-010712f6d7ff703ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "iacppg-scalr_sg",
            "name_prefix": null,
            "owner_id": "670025224396",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0a72697a34dff26e7"
          }
        }
      ]
    }
  ]
}